--- a/teste-imagem-Cinza.ipynb
+++ b/teste-imagem-Cinza.ipynb
@@ -6,10 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importação das bibliotecas\n",
+    "#bibliotecas\n",
     "import numpy as np\n",
+    "import zipfile\n",
     "import cv2 as cv\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import json\n",
+    "import base64 "
    ]
   },
   {
@@ -18,8 +21,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#abrindo caminho da imagem para leitura\n",
-    "img = cv.imread('br.jpg')"
+    "#convertendo a imagem na escala de cinza\n",
+    "img = cv.imread('lala.jpg',0)\n",
+    "#gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "#cv.imshow('Estudo OpenCV- Filtro', img)\n",
+    "#cv.waitKey(0)"
    ]
   },
   {
@@ -28,19 +34,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#retornando tamanho do array da imagem\n",
+    "#retornando tamanho do array\n",
     "imagem = np.array(img)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#exibindo o array da imagem\n",
+    "#imagem = np.array(img)\n",
+    "altura,largura = np.shape(imagem)\n",
+    "for x in range(0,altura):\n",
+    "        for y in range(0,largura):\n",
+    "            print(imagem[x][y])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(largura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exibindo o array\n",
     "print(imagem)"
    ]
   },
@@ -50,8 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in imagem:\n",
-    "    print(i)"
+    "#criando uma copia da imagem\n",
+    "cv.imwrite('lala.jpg', imagem)"
    ]
   },
   {
@@ -60,81 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plotando grafo da imagem\n",
-    "plt.plot(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "lista = []\n",
-    "for i in imagem:\n",
-    "    for j in i:\n",
-    "        b = int(sum(j)/3)\n",
-    "        lista.append(b)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imagem  = np.array(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seting = set(lista)\n",
-    "chamado = {i:lista.count(i) for i in seting}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "print(chamado)\n",
-    "plt.figure(figsize=(12,10))\n",
-    "plt.bar(chamado.keys(),chamado.values())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "for i in imagem:\n",
-    "    for  j in i:\n",
-    "        a= int(sum(j)/3)\n",
-    "        j[0] = a\n",
-    "        j[1] = a  \n",
-    "        j[2] = a\n",
-    "'''        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#pegando as cordenadas\n",
     "comprimento = len(img)\n",
     "largura = len(img[0])\n",
-    "variavel = {f\"{x}/{y}\":str(img[x][y])for x in range(comprimento) for y in range(largura)}"
+    "variavel = {f\"{x}/{y}\":str(img[x][y])for x in range(comprimento) for y in range(largura)}\n"
    ]
   },
   {
@@ -143,7 +99,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(variavel)"
+    "variavel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformando a imagem em base64\n",
+    "\n",
+    "data = {}\n",
+    "with open('lala.jpg', mode='rb') as file:\n",
+    "    img = file.read()\n",
+    "data = base64.encodebytes(img).decode(\"utf-8\")\n",
+    "\n",
+    "arquivo = open('b64_imagem.txt','w')\n",
+    "arquivo.write(str(data))\n",
+    "arquivo.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compactando a imagem\n",
+    "zip_file = zipfile.ZipFile('b64.zip', 'w')\n",
+    "zip_file.write('b64_imagem.txt', compress_type=zipfile.ZIP_DEFLATED)\n",
+    "zip_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lendo a imagem em base64\n",
+    "arquivo = open('b64_imagem.txt')\n",
+    "teste=arquivo.read()\n",
+    "arquivo.close()\n",
+    "print(teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"teste.jpg\"\n",
+    "img = base64.b64decode(teste)\n",
+    "with open(filename,\"wb\") as f:\n",
+    "    f.write(img)\n"
    ]
   },
   {
