--- a/Curso-Flask.ipynb
+++ b/Curso-Flask.ipynb
@@ -1,14 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from matplotlib import pyplot as plt"
+    "<font color=\"black\"><h1>Criando uma aplicação web super rápido</h1></font>"
    ]
   },
   {
@@ -17,9 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv.imread('dogs.jpg')\n",
-    "cv.imshow('teste',img)\n",
-    "#cv.waitKey(0)"
+    "from flask import Flask, render_template,request,redirect"
    ]
   },
   {
@@ -28,18 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagem = np.array(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(imagem)"
+    "app = Flask(__name__)"
    ]
   },
   {
@@ -48,31 +31,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in imagem:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# definindo a classe jogo\n",
+    "class Jogo:\n",
+    "    def __init__(self, nome, categoria, console):\n",
+    "        self.nome = nome\n",
+    "        self.categoria = categoria\n",
+    "        self.console = console\n",
     "\n",
-    "lista = []\n",
-    "for i in imagem:\n",
-    "    for j in i:\n",
-    "        b = int(sum(j)/3)\n",
-    "        lista.append(b)"
+    "jogo1 = Jogo('Super Mario', 'Acao', 'SNES')\n",
+    "jogo2 = Jogo('Pokemon Gold', 'RPG', 'GBA')\n",
+    "jogo3 = Jogo('Mortal Kombat', 'LutA', 'SNES')\n",
+    "lista = [jogo1, jogo2, jogo3]"
    ]
   },
   {
@@ -81,7 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagem  = np.array(img)"
+    "# listando os jogos inserido\n",
+    "@app.route('/')\n",
+    "def index():\n",
+    "    return render_template('lista.html', titulo='Jogos',\n",
+    "                           jogos=lista)"
    ]
   },
   {
@@ -90,8 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seting = set(lista)\n",
-    "chamado = {i:lista.count(i) for i in seting}"
+    "# criando novo jogo\n",
+    "@app.route('/novo')\n",
+    "def novo():\n",
+    "    return render_template('novo.html', titulo='Novo jogo')\n",
+    "#app.run()"
    ]
   },
   {
@@ -100,10 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "print(chamado)\n",
-    "plt.figure(figsize=(12,10))\n",
-    "plt.bar(chamado.keys(),chamado.values())\n"
+    "#jogo criado\n",
+    "@app.route('/criar', methods=['POST',])\n",
+    "def criar():\n",
+    "    nome = request.form['nome']\n",
+    "    categoria = request.form['categoria']\n",
+    "    console = request.form['console']\n",
+    "    jogo = Jogo(nome, categoria, console)\n",
+    "    lista.append(jogo)\n",
+    "    return redirect('/')"
    ]
   },
   {
@@ -112,21 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in imagem:\n",
-    "    for  j in i:\n",
-    "        a= int(sum(j)/3)\n",
-    "        j[0] = a\n",
-    "        j[1] = a  \n",
-    "        j[2] = a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " cv.imwrite('carlos.jpg', imagem)"
+    "app.run()"
    ]
   },
   {
