--- a/teste-imagem-Cinza.ipynb
+++ b/teste-imagem-Cinza.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#convertendo a imagem na escala de cinza\n",
-    "img = cv.imread('lala.jpg',0)\n",
-    "#gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "#cv.imshow('Estudo OpenCV- Filtro', img)\n",
-    "#cv.waitKey(0)"
+    "imagem = cv.imread('pikachu.jpg',0)\n",
+    "#gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "altura = len(imagem[0])\n",
+    "largura = len(imagem)\n",
+    "\n",
+    "for x in range( altura-1):\n",
+    "    for y in range(largura-1):\n",
+    "        if (imagem[x][y]== imagem[x+1][y]):\n",
+    "            pass\n",
+    "        else:\n",
+    "            imagem[x][y] = 0\n",
+    "            \n",
+    "            \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.imshow('Estudo OpenCV- Filtro', imagem)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ]
   },
   {
@@ -34,31 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#retornando tamanho do array\n",
-    "imagem = np.array(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#imagem = np.array(img)\n",
-    "altura,largura = np.shape(imagem)\n",
-    "for x in range(0,altura):\n",
-    "        for y in range(0,largura):\n",
-    "            print(imagem[x][y])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(largura)"
+    "cv.imwrite('teste.jpg', img)"
    ]
   },
   {
@@ -87,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pegando as cordenadas\n",
+    "#pegando as cordenadas do pixel\n",
     "comprimento = len(img)\n",
     "largura = len(img[0])\n",
     "variavel = {f\"{x}/{y}\":str(img[x][y])for x in range(comprimento) for y in range(largura)}\n"
@@ -109,7 +121,6 @@
    "outputs": [],
    "source": [
     "# transformando a imagem em base64\n",
-    "\n",
     "data = {}\n",
     "with open('lala.jpg', mode='rb') as file:\n",
     "    img = file.read()\n",
@@ -126,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#compactando a imagem\n",
+    "#compactando a imagem b64\n",
     "zip_file = zipfile.ZipFile('b64.zip', 'w')\n",
     "zip_file.write('b64_imagem.txt', compress_type=zipfile.ZIP_DEFLATED)\n",
     "zip_file.close()"
@@ -139,7 +150,7 @@
    "outputs": [],
    "source": [
     "#lendo a imagem em base64\n",
-    "arquivo = open('b64_imagem.txt')\n",
+    "arquivo = open('position.txt')\n",
     "teste=arquivo.read()\n",
     "arquivo.close()\n",
     "print(teste)"
@@ -155,6 +166,27 @@
     "img = base64.b64decode(teste)\n",
     "with open(filename,\"wb\") as f:\n",
     "    f.write(img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.imshow('Estudo OpenCV- Filtro', img)\n",
+    "cv.waitKey(0)"
    ]
   },
   {
