--- a/teste-imagem-Cinza.ipynb
+++ b/teste-imagem-Cinza.ipynb
@@ -194,7 +194,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for x in range(altura-1):\n",
+    "    for y in range(comprimento-1):\n",
+    "        if (imagem[x][y] == imagem[x+1][y]).all() or (imagem[x][y] == imagem[x][y+1]).all() :\n",
+    "            imagem[x][y] = [255,255,255]\n",
+    "        else:\n",
+    "            imagem[x][y] = [255,0,0]"
+   ]
   }
  ],
  "metadata": {
