--- a/teste_borda.ipynb
+++ b/teste_borda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,40 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagem = cv2.imread('mario.jpg')"
+    "imagem = cv2.imread('chum.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "altura = len(imagem[0])\n",
-    "comprimento = len(imagem)"
+    "altura = len(imagem[1])\n",
+    "largura = len(imagem[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for x in range(altura-1):\n",
-    "    for y in range(comprimento-1):\n",
-    "        if (imagem[x][y] == imagem[x+1][y]).all() or (imagem[x][y] == imagem[x][y+1]).all() :\n",
-    "            imagem[x][y] = [255,255,255]\n",
-    "        else:\n",
-    "            imagem[x][y] = [255,0,0]"
+    "    for y in range(largura-1):\n",
+    "        if((imagem[x+1][y])   + (imagem[x][y]>50)).all():\n",
+    "            if((imagem[x][y]) + (imagem[x][y+1]>50)).all():\n",
+    "                imagem[x][y]=[255,255,255]\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +56,29 @@
     }
    ],
    "source": [
-    "print(imagem[0][0])"
+    "print(imagem[0][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "for x in range(altura-1):\n",
+    "    for y in range(largura-1):\n",
+    "       # if((imagem[x+1][y]* imagem[x][y]) - (imagem[x][y]*imagem[x][y+1]>0)).all():\n",
+    "            if( imagem[x+1][y] - imagem[x][y+1]).all():\n",
+    "                imagem[x][y]=[255,255,255]\n",
+    "            else:\n",
+    "                imagem[x][y]=[0,0,255]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -70,27 +87,6 @@
     "cv2.imshow(\"teste\",imagem)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-11-3828242a4bd2>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-3828242a4bd2>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if(imagem[x][y]==imagem[x][y] and imagem[x][y] != pinta):\u001b[0m\n\u001b[1;37m                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
-   "source": [
-    "pinta =[255,0,0]\n",
-    "for x in range(0,len(imagem)):\n",
-    "    for y in range(0,len(imagem)):\n",
-    "        if(imagem[x][y]==imagem[x][y] and imagem[x][y] != pinta):"
    ]
   },
   {
